# gigi-episodes

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: quickstart.py
src/gigi_episodes/: __init__.py  algorithm.py  backends.py  cli.py  core.py
tests/: test_algorithm.py  test_backends.py  test_cli.py
