[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gigi-episodes"
version = "0.1.0"
description = "Change-point detection for time series — single brain primitive made portable. Built on GIGI's EPISODIC primitive (https://davisgeometric.com)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Bee Rosa Davis", email = "bee_davis@alumni.brown.edu" }]
keywords = [
  "change-point",
  "changepoint",
  "time-series",
  "anomaly-detection",
  "gigi",
  "brain-primitives",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "numpy>=1.22",
]

[project.optional-dependencies]
gigi = ["requests>=2.31"]
dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.1"]

[project.scripts]
gigi-episodes = "gigi_episodes.cli:main"

[project.urls]
Homepage = "https://davisgeometric.com"
Repository = "https://github.com/nurdymuny/gigi-episodes"
Documentation = "https://github.com/nurdymuny/gigi-episodes#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/gigi_episodes"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
testpaths = ["tests"]
